update trinidad command